# sonobe

./: Cargo.toml  PROJECT_OVERVIEW.md
fl-zkp-bridge/: ARCHITECTURE.md  COMPLETE.md  Cargo.toml  EXECUTION_GUIDE.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICKSTART.md  README.md  STATUS.md  SUCCESS_REPORT.md  TESTING.md  VERIFICATION_REPORT.md  build.sh  examples.toml  pyproject.toml  test_setup.sh
fl-zkp-bridge/examples/: README.md  addition_circuit.rs  fl_advanced.py  fl_demo.py  sequential_folding_pipeline.rs
fl-zkp-bridge/src/: lib.rs
folding-schemes/src/arith/ccs/: mod.rs
folding-schemes/src/arith/r1cs/: mod.rs
